<resources>
    <string name="app_name">AD340App</string>
    <string name="my_title">MyLists</string>
    <string name="my_name">Ilsa Coleman</string>
    <string name="tulip_description">Family photo at Skagit Valley tulips</string>
    <string name="my_bio">Prostate cancer researcher at the Fred Hutch;
                            aspiring software developer.  I recently
                            learned how terrifying it is to teach your 15
                            year old to drive. When I\'m not in the passenger
                            seat I enjoy running, music, and gardens.
                            Fun fact: My parents are marine biologists who named
                            a new species after my son Alex (<i>Trididemnum alexi</i>).
    </string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="about_title">About</string>
    <string name="about_desc"><b>MyLists</b> is the app to keep track of all of your lists.
                                Whether its groceries, to-do, contacts, home, or work,
                                keep track of it all in one place with MyLists.
    </string>
    <string name="about_github">Visit the MyList GitHub for free access to the source code:\n
                                https://github.com/imcoleman/AD340-Mobile-Apps
    </string>
    <string name="about_version">Version number:\n 1.0.4</string>
    <string name="about_contact">Contact the developer:\n
                                    talexi2001@gmail.com
    </string>
    <string name="settings">settings</string>
    <string name="map">map</string>
    <string name="about">about</string>
    <string name="contacts">contacts</string>
    <string name="search">search</string>
    <string name="dialog_msg">Please select an option below:</string>
    <string name="dialog_title">Create New List</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_location">Map</string>
    <string name="title_activity_fetch_address_intent_service">FetchAddressIntentService</string>
    <string name="label_latitude">Latitude:     </string>
    <string name="label_longitude">Longitude:   </string>
    <string name="label_location">Location:     </string>
    <string name="no_location_data">No Location Data</string>
    <string name="service_not_available">Service unavailable</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">No address found</string>
    <string name="invalid_lat_long_used">Invalid Lat/Long</string>
</resources>
