<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- toolbar menu items -->

    <item android:id="@+id/menu_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp" />

    <item
        android:id="@+id/menu_map"
        android:title="@string/map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_my_location_white_24px" />

    <item
        android:id="@+id/menu_contacts"
        android:title="@string/contacts"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_contact_phone_white_24dp"/>

    <item
        android:id="@+id/menu_about"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_white_24dp" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_white_24dp" />

</menu>